# mpi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
